[gd_scene load_steps=13 format=3 uid="uid://tbe00hjr5q63"]

[ext_resource type="Script" uid="uid://bfun1cur26iea" path="res://scripts/battle_manager.gd" id="1_8ekmn"]
[ext_resource type="Script" uid="uid://7ikv67lbs1gk" path="res://scripts/CardManager.gd" id="2_tixef"]
[ext_resource type="Script" uid="uid://cqjptf1j6k31i" path="res://scripts/player_hand.gd" id="3_ht6mf"]
[ext_resource type="Script" uid="uid://cm4032scktvno" path="res://scripts/deck.gd" id="4_gxsgc"]
[ext_resource type="Texture2D" uid="uid://cab0fe5vwt5yr" path="res://assets/CartaFundo2.png" id="5_el2ft"]
[ext_resource type="Script" uid="uid://fvjuii13avah" path="res://scripts/input_manager.gd" id="6_v1vsp"]
[ext_resource type="PackedScene" uid="uid://dvuc35rh86bx5" path="res://scenes/card_slot.tscn" id="7_qbk65"]
[ext_resource type="Script" uid="uid://c3fe3x00fn2qk" path="res://scripts/land_card_slot.gd" id="8_8fuj6"]
[ext_resource type="Script" uid="uid://5xopoltkuhv4" path="res://scripts/Graveyard.gd" id="9_rpubd"]
[ext_resource type="Texture2D" uid="uid://bkgfcwy0eesjm" path="res://assets/graveyardImage.png" id="10_rpubd"]
[ext_resource type="Script" uid="uid://cntwrvt56vwxd" path="res://scripts/vfx/CombatLineDrawer.gd" id="10_xhjue"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_buj2l"]
size = Vector2(148, 208)

[node name="PlayerField" type="Node2D"]

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("1_8ekmn")

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("2_tixef")

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("3_ht6mf")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(150, 930)
scale = Vector2(0.6, 0.6)
script = ExtResource("4_gxsgc")

[node name="DeckImage" type="Sprite2D" parent="Deck"]
z_index = -2
position = Vector2(-0.375, 0.49999988)
scale = Vector2(0.17042825, 0.17483108)
texture = ExtResource("5_el2ft")

[node name="Area2D" type="Area2D" parent="Deck"]
position = Vector2(-0.375, 0.49993896)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
shape = SubResource("RectangleShape2D_buj2l")

[node name="CardCountLabel" type="RichTextLabel" parent="Deck"]
modulate = Color(0, 0, 0, 1)
z_index = -2
offset_left = -29.375
offset_top = -34.5
offset_right = -9.375
offset_bottom = -11.0
scale = Vector2(3, 3)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("6_v1vsp")

[node name="PlayerCardSlots" type="Node2D" parent="."]
z_index = -3

[node name="CardSlot" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(1420, 650)

[node name="CardSlot2" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(1305, 650)

[node name="CardSlot3" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(1190, 650)

[node name="CardSlot4" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(1075, 650)

[node name="CardSlot5" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(960, 650)

[node name="CardSlot6" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(845, 650)

[node name="CardSlot7" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(730, 650)

[node name="CardSlot8" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(615, 650)

[node name="CardSlot9" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(500, 650)

[node name="CardSlot10" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(1420, 800)
script = ExtResource("8_8fuj6")

[node name="CardSlot11" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(1305, 800)
script = ExtResource("8_8fuj6")

[node name="CardSlot12" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(1190, 800)
script = ExtResource("8_8fuj6")

[node name="CardSlot13" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(1075, 800)
script = ExtResource("8_8fuj6")

[node name="CardSlot14" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(960, 800)
script = ExtResource("8_8fuj6")

[node name="CardSlot15" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(845, 800)
script = ExtResource("8_8fuj6")

[node name="CardSlot16" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(730, 800)
script = ExtResource("8_8fuj6")

[node name="CardSlot17" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(615, 800)
script = ExtResource("8_8fuj6")

[node name="CardSlot18" parent="PlayerCardSlots" instance=ExtResource("7_qbk65")]
position = Vector2(500, 800)
script = ExtResource("8_8fuj6")

[node name="PhaseButton" type="Button" parent="."]
offset_left = 48.0
offset_top = 540.0
offset_right = 169.0
offset_bottom = 571.0
text = "Finalizar turno"

[node name="PlayerHealthLabel" type="RichTextLabel" parent="."]
offset_left = 238.0
offset_top = 703.0
offset_right = 278.0
offset_bottom = 743.0
scale = Vector2(2, 2)
text = "0"

[node name="PlayerEnergyLabel" type="RichTextLabel" parent="."]
offset_left = 310.0
offset_top = 701.0
offset_right = 381.0
offset_bottom = 741.0
scale = Vector2(2, 2)
text = "0"

[node name="ConfirmActionButton" type="Button" parent="."]
visible = false
offset_left = 49.0
offset_top = 585.0
offset_right = 182.0
offset_bottom = 616.0
text = "Confirmar Alvos"

[node name="BattleTimer" type="Timer" parent="."]

[node name="CombatLineDrawer" type="Node2D" parent="."]
z_index = 6
script = ExtResource("10_xhjue")

[node name="Graveyard" type="Node2D" parent="."]
position = Vector2(150, 775)
script = ExtResource("9_rpubd")

[node name="GraveyardImage" type="Sprite2D" parent="Graveyard"]
scale = Vector2(0.37438178, 0.35461956)
texture = ExtResource("10_rpubd")

[node name="CountLabel" type="Label" parent="Graveyard"]
modulate = Color(0.003921569, 0, 0.07058824, 1)
offset_left = -18.0
offset_top = -17.0
offset_right = 8.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 23
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Area2D" type="Area2D" parent="Graveyard"]
collision_layer = 16
collision_mask = 0
input_pickable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Graveyard/Area2D"]
visible = false
polygon = PackedVector2Array(-23, 16, -35, 20, -36, 27, -43, 27, -43, 32, 43, 33, 43, 28, 37, 27, 35, 19, 22, 15, 22, -19, 10, -31, -12, -32, -22, -20)
